# fumosay

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
fumofiles/: cirno.fumo  fumo.fumo  mini.fumo
src/: fumo.rs  fumosay.cpp  main.rs
